# aset

./: .coverage  .gitignore  ARCHITECTURE.md  ASET_GUI_การคำนวณค่า.xlsx  CLAUDE.md  FINAL_CHECKLIST.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  Procfile  QUICK_START.md  README.md  analysis_module.py  app_bootstrapper.py  auto_controller.py  battery_model.py  battery_profiles.json  battery_profiles.py  charge_controller.py  cloud_push.py  command_center.py  command_center_profiles.json  config.example.json  config.json  config.py  context_summary.md  event_system.py  exceptions.py  flake8_report.txt  generate_sample_data.py  hardware_driver.py  iec61960_standard.py  main.py  main_qt.py  make_training_data.py  mock_hardware.py  mycrash.txt  pyproject.toml  requirements.txt  search.py  send_tunnel_url_email.ps1  (+11 more)
.claude/: launch.json  settings.local.json
aset_batt/: __main__.py
cloud_dashboard/: DEPLOY_AZURE.md  Dockerfile  README.md  requirements.txt  server.py
docs/: limitations_future_work.md  method3_fast_r0.md  pel3111_psw_hardware_reference.md  project_pivot.md  rig_investigation_findings.md  rig_status_action_items.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: bench_check.py  charge_efficiency_calibration.py  clean_test_sessions.py  generate_sample_data.py  make_training_data.py  pel_capacity_test.py  replay.py  self_calibration_test.py  train_grader.py
tests/: conftest.py  test_acquisition.py  test_acquisition_worker.py  test_aging_factor_wiring.py  (+108 more)
(+68 files in other folders)
